--- a/webapp/templates/home.html
+++ b/webapp/templates/home.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
 {% block 'content' %}
-    <h1>Hello, world!!!</h1>
-    
+    <h1>Welcome To My Math Flashcard Website!</h1>
+
 {% endblock %}
